tracing dots around proj cards

--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@
             </div>
             <div class="projects-list">
                 <article class="project-item">
+                    <div class="dot"></div>
+                    <div class="dot2"></div>
                     <div class="project-header">
                         <img src="src/assets/images/recipediary.png" alt="Recipe Diary" class="project-image">
                         <div class="project-info">
@@ -196,6 +198,7 @@
                 </article>
 
                 <article class="project-item">
+                    <div class="dot3"></div>
                     <div class="project-header">
                         <img src="src/assets/images/translatepal.png" alt="Task Management App" class="project-image">
                         <div class="project-info">
@@ -217,6 +220,8 @@
                 </article>
 
                 <article class="project-item">
+                    <div class="dot"></div>
+                    <div class="dot2"></div>
                     <div class="project-header">
                         <img src="src/assets/images/bb.png" alt="Design System" class="project-image">
                         <div class="project-info">
