favicon and dot animations

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
 </head>
 <body class="grid-background">
     <!-- Theme Toggle -->
@@ -173,10 +174,22 @@
             </div>
             <div class="projects-list">
                 <article class="project-item">
-                    <div class="dot"></div>
-                    <div class="dot2"></div>
+                    <div class="dot1"></div>
+                    <div class="line-top"></div>
+                    <div class="line-left"></div>
+                    <div class="line-bottom"></div>
+                    <div class="line-right"></div>
                     <div class="project-header">
-                        <img src="src/assets/images/recipediary.png" alt="Recipe Diary" class="project-image">
+                        <!-- CARD From Uiverse.io by gharsh11032000 --> 
+                        <div class="card">
+                            <img src="src/assets/images/recipediary.png" alt="Recipe Diary" class="project-image">
+                            <div class="card-content">
+                                
+                                <p class="card-title">Recipe Diary</p>
+                                <p class="card-description"></p>
+                                <a href="https://recipediary.vercel.app/" target="_blank" class="project-link">View Live →</a>
+                            </div>
+                        </div>
                         <div class="project-info">
                             <div class="project-meta">
                                 <div class="project-number">01</div>
@@ -199,8 +212,20 @@
 
                 <article class="project-item">
                     <div class="dot3"></div>
+                    <div class="line-top"></div>
+                    <div class="line-left"></div>
+                    <div class="line-bottom"></div>
+                    <div class="line-right"></div>
                     <div class="project-header">
-                        <img src="src/assets/images/translatepal.png" alt="Task Management App" class="project-image">
+                         <div class="card">
+                            <img src="src/assets/images/translatepal.png" alt="Translate Pal" class="project-image">
+                            <div class="card-content">
+                                <p class="card-title">TranslatePal</p>
+                                <p class="card-description"></p>
+                                <a href="https://www.youtube.com/watch?v=Q0lVD1fUGos" target="_blank" class="project-link">View Demo →</a>
+                            </div>
+                        </div>
+                        
                         <div class="project-info">
                             <div class="project-meta">
                                 <div class="project-number">02</div>
@@ -218,12 +243,22 @@
                         </div>
                     </div>
                 </article>
-
                 <article class="project-item">
-                    <div class="dot"></div>
+                    <div class="dot1"></div>
                     <div class="dot2"></div>
+                    <div class="line-top"></div>
+                    <div class="line-left"></div>
+                    <div class="line-bottom"></div>
+                    <div class="line-right"></div>
                     <div class="project-header">
-                        <img src="src/assets/images/bb.png" alt="Design System" class="project-image">
+                        <div class="card">
+                            <img src="src/assets/images/bb.png" alt="Budget Best" class="project-image">
+                            <div class="card-content">
+                                <p class="card-title">Budget Best</p>
+                                <p class="card-description"></p>
+                                <a href="https://budget-best-dev.web.app/login" class="project-link">View Live →</a>
+                            </div>
+                        </div>
                         <div class="project-info">
                             <div class="project-meta">
                                 <div class="project-number">03</div>
