--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/favicon.svg?" type="image/svg+xml" />
+    <link rel="icon" href="./favicon.svg?" type="image/svg+xml" />
 </head>
 <body class="grid-background">
     <!-- Theme Toggle -->
