added proj tags

--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                                 <span>Node.js</span>
                                 <span>Firebase</span>
                                 <span>Supabase</span>
+                                <span>Python</span>
                             </div>
                             <div class="project-links">
                                 <a href="https://recipediary.vercel.app/" target="_blank" class="project-link">View Live →</a>
@@ -317,6 +318,7 @@
                             <div class="project-tech">
                                 <span>React</span>
                                 <span>Firebase</span>
+                                <span>JavaScript</span>
                             </div>
                             <div class="project-links">
                                 <a href="https://budget-best-dev.web.app/login" class="project-link">View Live →</a>
